[metadata]
name = yearsinpixels_api
version = 0.0.1
author = Daniel Gran
author_email = daniel.gran@mailbox.org
description = Second layer
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://www.yearsinpixels.com
project_urls =
    Repository = https://github.com/danielgran/yearsinpixels_business
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    yearsinpixels_business

[options.packages.find]
where = src